components/minio/examples/helm-operator-tenant/tenant/gateway/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: minio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: http # 对应 Gateway 的监听器名称
  hostnames:
    - "minio.dev.test"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: myminio-console
          port: 9443
